--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "back-stage-management",
+  "name": "lege-management",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite --host --port 3002 --open",
+    "dev": "vite --host --port 3002",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^4.24.1",
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.23.4",
+    "axios": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router": "^6.4.3",
-    "react-router-dom": "^6.4.3",
-    "redux": "^4.2.0",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "reset-css": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
-    "consola": "^2.15.3",
-    "less": "^2.7.3",
-    "sass": "^1.56.1",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.3",
-    "vite-plugin-style-import": "^2.0.0"
+    "@types/node": "^18.8.3",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "less": "^2.7.1",
+    "sass": "^1.55.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.15",
+    "vite-plugin-style-import": "^1.4.1"
   }
 }
